# sale_subscription_pos_ar

./: CHANGELOG  COPYRIGHT  __init__.py  pyproject.toml  setup.py  subscription.py  tox.ini  tryton.cfg
doc/: index.rst
tests/: __init__.py  scenario_subscription_pos.rst  test_module.py
