[build-system]
requires = [
    'hatchling >= 1',
    'hatch-tryton',
    'hatch-tryton-ar @ git+https://github.com/tryton-ar/hatch-tryton-ar.git'
    ]
build-backend = 'hatchling.build'

[project]
name = 'trytonar_sale_subscription_pos_ar'
dynamic = ['version', 'dependencies', 'optional-dependencies', 'authors', 'readme']
requires-python = '>=3.10'
maintainers = [
    {name = "tryton-ar", email = "info@tryton.org.ar"},
    ]
description = "Tryton module that integrates sales subscriptions with POS"
license = 'GPL-3.0-or-later'
license-files = ['LICENSE', 'COPYRIGHT']
keywords = ["tryton", "subscription", "sale", "pos"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Framework :: Tryton",
    "Topic :: Office/Business",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Software Development :: Libraries :: Python Modules",
    ]

[project.entry-points.'trytond.modules']
sale_subscription_pos_ar = 'trytond.modules.sale_subscription_pos_ar'

[project.scripts]

[project.urls]
homepage = "https://github.com/tryton-ar/sale_subscription_pos_ar"
documentation = "https://docs.tryton.org/"
changelog = "https://github.com/tryton-ar/sale_subscription_pos_ar/blob/master/CHANGELOG"
forum = "https://www.tryton.org/forum"
issues = "https://github.com/tryton-ar/sale_subscription_pos_ar/issues"
funding = "https://www.tryton.org/donate"

[tool.hatch.build]
include = [
    '**/tryton.cfg',
    '**/*.py',
    '**/*.xml',
    'view/**/*.xml',
    'locale/**/*.po',
    '**/*.fodt',
    'icons/**/*.svg',
    'tests/**/*.rst',
    'tests/**/*.json',
    'tests/**/*.csv',
    'scripts/**/*',
    ]
exclude = ['doc']

[tool.hatch.build.targets.wheel.sources]
"" = "trytond/modules/sale_subscription_pos_ar"

[tool.hatch.metadata.hooks.tryton]
dependencies = []
copyright = 'COPYRIGHT'
readme = 'README.rst'

[tool.hatch.metadata.hooks.tryton.prefixes]
sale_pos_ar = 'trytonar'

[tool.hatch.metadata.hooks.tryton-ar]

[tool.hatch.metadata.hooks.tryton.tryton-optional-dependencies]
test = ['proteus']

[tool.hatch.metadata]
allow-direct-references = true
